# src/supervaizer/examples/controller_template.py
@@ -9,6 +9,7 @@
 # and edited to configure your agent(s)
 
 import os
+
 import shortuuid
 from rich.console import Console
 
@@ -33,6 +34,17 @@ console = Console(style="yellow")
 DEV_PUBLIC_URL = "https://myagent-dev.loca.lt"
 # Public url of your hosted agent
 PROD_PUBLIC_URL = "https://myagent.cloud-hosting.net:8001"
+
+
+def get_dynamic_choices(method_name: str, context: dict) -> dict[str, list[tuple[str, str]]]:
+    if method_name == "start":
+        return {
+            "projects": [("P1", "Project 1"), ("P2", "Project 2"), ("P3", "Project 3")],
+        }
+    return {
+        "projects": [("P1", "Project 1"), ("P2", "Project 2"), ("P3", "Project 3")],
+    }
+
 
 # Define the parameters and secrets expected by the agent
 agent_parameters: ParametersSetup | None = ParametersSetup.from_list([
@@ -89,6 +101,13 @@ job_start_method: AgentMethod = AgentMethod(
             field_type="ChoiceField",
             choices=[("A", "Advanced"), ("R", "Restricted")],
             widget="RadioSelect",
+            required=True,
+        ),
+        AgentMethodField(
+            name="List of projects",
+            type=str,
+            field_type="ChoiceField",
+            dynamic_choices="projects",
             required=True,
         ),
         AgentMethodField(
@@ -173,6 +192,7 @@ agent: Agent = Agent(
     ),
     parameters_setup=agent_parameters,
     instructions_path="supervaize_instructions.html",  # Path where instructions page is served
+    dynamic_choices_callback=get_dynamic_choices,
 )
 
 # For export purposes, use dummy values if environment variables are not set
